# music

./: .gitignore  CMakeLists.txt  music.pro
app-music/: CMakeLists.txt
app-music/include/application/: Application.h
app-music/include/interface/: MainWindow.h
app-music/include/workers/: WorkerFFT.h  WorkerMusicPlayer.h  WorkerSignalGenerator.h
app-music/src/application/: Application.cpp
app-music/src/interface/: MainWindow.cpp
app-music/src/workers/: Worker.cpp  WorkerFFT.cpp  WorkerMusicPlayer.cpp  WorkerSignalGenerator.cpp
app-music/ui/interface/: MainWindow.ui  mainwindow.ui
config/: config.txt
toolkit-qt/: CMakeLists.txt
toolkit-qt/include/: BufferedSignalDisplay.h  SignalDisplay.h
toolkit-qt/src/: BufferedSignalDisplay.cpp
toolkit-signal/: CMakeLists.txt
toolkit-signal/include/: FFT.h  SineGenerator.h
toolkit-signal/src/: FFT.cpp
